tests/Tuc/Fixtures/errors/WrongEventName-post.tuc
tuc parse error test
participants
    GenericService parts
    [InputStream] parts

GenericService
    .InputEvent -> [InputStream]
